[package]
name = "samaritan-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {  version = "0.5.0", features = ["json"] }
figment = "0.10.14"
log = "0.4.19"
simplelog = "0.12.1"
lazy_static = "1.4.0"
async-std = "1.12.0"
