[package]
name = "samaritan-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {  version = "0.5.0", features = ["json"] }
figment = "0.10.14"
log = "0.4.19"
base64 = "0.21.7"
serde = { version = "1.0", features = ["derive"] }
rust-ini = "0.20.0"
sled = "0.34.7"
uuid = { version = "1.7.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
md5 = "0.7.0"
rand = "0.8.5"
async-std = { version = "1.12", features = ["attributes"] }
reqwest = { version = "0.11", features = ["json"] }
